k8s-tmp/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      labels:
        io.kompose.service: app
    spec:
      containers:
      - image: app
        imagePullPolicy: IfNotPresent
        name: app
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /app
          name: app-claim0
      restartPolicy: Always
      volumes:
      - name: app-claim0
        persistentVolumeClaim:
          claimName: app-claim0
status: {}
