k8s-tmp/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  template:
    metadata:
      labels:
        io.kompose.service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          value: "yes"
        image: mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/
          name: mysql-config-map-volume
          readOnly: true
        - mountPath: /var/lib/mysql
          name: mysql-persistent-volume
      volumes:
        - name: mysql-persistent-volume
          persistentVolumeClaim:
            claimName: mysql-persistent-volume-claim  
        - name: mysql-config-map-volume
          configMap:
            name: mysql-initdb-config
