k8s-tmp/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
