k8s-tmp/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    app: client
status:
  loadBalancer: {}
