k8s-tmp/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-service
spec:
  ports:
  - name: "5050"
    port: 5050
    targetPort: 5000
  selector:
    io.kompose.service: webui
status:
  loadBalancer: {}
